# blog.aaronholmes.net

./: .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
source/: 404.rst  _circuit_scribe_art_project_step_number_1.rst  _circuit_scribe_art_project_step_number_3.rst  _displaying_response_headers_and_pretty_json_with_curl.rst  _my_ghost_theme_casper_for_developers.rst  _printing_function_body_in_chromes_console.rst  _reading_an_http_request_response_body_from_exceptions.rst  _running_entity_framework_migrations_on_application_start.rst  _simple_programming_patterns_and_conventions.rst  _simple_way_to_prevent_websites_jumping_from_scrollbars.rst  _speech_synthesis_on_windows_phone_8_1.rst  _the_behavior_of_csharp_nested_static_classes.rst  _transparent_video_in_all_browsers_from_cross_domain_sources.rst  _two_short_ack_filetype_definitions_for_typescript.rst  _using_git_with_the_git_directory_outside_the_git_repository_directory.rst  _using_time_as_a_color_generator.rst  ads.txt  circuit_scribe_art_project_step_number_1.rst  circuit_scribe_art_project_step_number_2.rst  circuit_scribe_art_project_step_number_3.rst  conf.py  displaying_code_with_ace_on_ghost.rst  displaying_response_headers_and_pretty_json_with_curl.rst  index.rst  javascript_vector_animations_with_divs_or_canvas.rst  my_ghost_theme_casper_for_developers.rst  printing_function_body_in_chromes_console.rst  reading_an_http_request_response_body_from_exceptions.rst  redirects.txt  running_entity_framework_migrations_on_application_start.rst  (+9 more)
(+34 files in other folders)
