[project]
name = "blog-aaronholmes-net"
version = "0.0.1"
description = "My blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esbonio ~= 0.16.5",
    "sphinx ~= 8.2.3",
    "sphinx-autobuild ~= 2024.10.3",
    "sphinx-autodoc-typehints ~= 3.2.0",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-rtd-theme ~= 3.0.2",
    "sphinx-toolbox ~= 4.0.0",
    "sphinxcontrib-plantuml ~= 0.30",
]
