[project]
name = "blog-aaronholmes-net"
version = "0.0.1"
description = "My blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esbonio ~= 0.16.5",
    "piccolo-theme ~= 0.24.0",
    "sphinx ~= 8.2.3",
    "sphinx-autobuild ~= 2024.10.3",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-tags ~= 0.4",
    "sphinx-toolbox ~= 4.0.0",
    "sphinxcontrib-plantuml ~= 0.30",
]
