[project]
name = "aaronholmes-net"
version = "0.0.1"
description = "Aaron Holmes' website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esbonio ~= 0.16.5",
    "sphinx ~= 8.2.3",
    "sphinx-autobuild ~= 2024.10.3",
    "sphinx-copybutton ~= 0.5.2",
    "sphinx-reredirects ~= 1.0.0",
    "sphinx-sitemap ~= 2.8.0",
    "sphinx-toolbox ~= 4.0.0",
]
